    #557801.
  * debhelper.in/libc.postinst: restart the services instead of stopping
    them and then starting them again.  Closes: #211784.
  * Use gcc/g++-4.4 on hppa, hurd-i386, mips and mipsel.
  * Mention EGLIBC in packages description.  Closes: #559121.
  * kfreebsd/local-sysdeps.diff: update to revision 2977 (from glibc-bsd).
  * Add support for sparc64 architecture. 

  [ Samuel Thibault ]
  * testsuite-checking/expected-results-i486-linux-gnu-libc: Add hurd-i386
    testsuite results.
  * sysdeps/hurd.mk: Enable testsuite.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 09 Dec 2009 15:27:02 +0100

eglibc (2.10.2-2) unstable; urgency=low

  [ Carlos O'Donell]
  * debian/patches/hppa/cvs-nptl-compat.diff: new version to fix 
    pthread structures alignment on hppa.

  [ Aurelien Jarno ]
  * debian/control: bump libc-bin breaks on libc0.1/0.3/6/6.1 to (<< 2.10).
    Closes: #556945.
  * patches/localedata/submitted-pt_BR.diff: new patch to fix the thousand
    separator on pt_BR locale.  Closes: #474479.
  * debhelper.in/locales.postinst: if an selected entry is present more than 
    once, only uncomment the first one.  Closes: #529368.
  * patches/any/submitted-gethostbyname3.diff: return an error if the 
    nameserver timeouts.  Closes: #499781.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 24 Nov 2009 06:12:57 +0100

eglibc (2.10.2-1) unstable; urgency=low

  [ Aurelien Jarno ]
  * New upstream minor release.
    - fix build timeout on SH4.  Closes: #552407.
    - disabled patches/svn-updates.diff.
    - remove patches/powerpc/cvs-readahead.diff (merged).
    - remove patches/any/submitted-libgcc_s.so.diff (merged).
    - remove patches/any/cvs-preadv-pwritev.diff (merged).
    - remove patches/any/cvs-getaddrinfo-nss-notfound.diff (merged).
  * patches/ia64/cvs-memchr.diff: new patch from upstream replacing
    patches/ia64/submitted-memchr.diff.
  * patches/any/cvs-malloc-check.diff: new patch from upstream to fix bugs