@@ -9,13 +9,15 @@ eglibc (2.10.2-3) UNRELEASED; urgency=low
   * Mention EGLIBC in packages description.  Closes: #559121.
   * kfreebsd/local-sysdeps.diff: update to revision 2977 (from glibc-bsd).
   * Add support for sparc64 architecture. 
+  * debian/sysdeps/mipsel.mk: remove hack to support buildds kernels now
+    that they have been upgraded.
 
   [ Samuel Thibault ]
   * testsuite-checking/expected-results-i486-linux-gnu-libc: Add hurd-i386
     testsuite results.
   * sysdeps/hurd.mk: Enable testsuite.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 09 Dec 2009 15:27:02 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 16 Dec 2009 18:15:41 +0100
 
 eglibc (2.10.2-2) unstable; urgency=low
 
